<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.gymrat.ui.AddPRsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/exercise_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/weight_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/x"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/reps_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/reps"
                android:inputType="number"/>
        </LinearLayout>
        <EditText
            android:id="@+id/vid_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/link"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_exc_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_white_48dp"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp" />

</FrameLayout>