<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.gymrat.ui.InviteFragment">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/share_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:src="@drawable/ic_send_white_48dp"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:orientation="vertical"
        android:padding="8dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/send_invite"
            android:textSize="32sp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <Button
            android:id="@+id/date_Button"
            style="@android:style/Widget.EditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@string/date_invite" />

        <Button
            android:id="@+id/time_Button"
            style="@android:style/Widget.EditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@string/time_invite" />
</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/workouts_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/wo_CB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="add workout info" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>